fix: ghost players appearing when switching between players when spectating; gas message covering spectate buttons on smaller screens

--- a/client/src/scss/pages/client/game.scss
+++ b/client/src/scss/pages/client/game.scss
@@ -599,7 +599,7 @@
 #gas-msg {
     text-align: center;
     position: absolute;
-    top: 20%;
+    top: 220px;
     left: 50%;
     transform: translateX(-50%);
 
